--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ROM_URL=https://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD1981_A_1.12.0-update-full_1598237886.zip
 ZIP_NAME=PD1981_A_1.12.0-update-full_1598237886.zip
 OS_TYPE=Generic
-BUILD_TYPE=A
+BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
 VERSION=12
