--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ROM_URL=https://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD1981_A_1.12.0-update-full_1598237886.zip
-ZIP_NAME=PD1981_A_1.12.0-update-full_1598237886.zip
-OS_TYPE=Generic
+ROM_URL=https://dlsvr04.asus.com.cn/pub/ASUS/ZenFone/ZS660KL/UL-ASUS_I001_1-ASUS-18.0210.2201.215-1.1.1-user.zip?model=ROG%20Phone%20II%20(ZS660KL)
+ZIP_NAME=ASUS_ROG_A11.zip
+OS_TYPE=ROG
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
-VERSION=12
+VERSION=11
